# ockam

./: CONTRIBUTING.md
implementations/elixir/examples/channel/: a.exs  b.exs  c.exs  local.exs
implementations/elixir/examples/influx/: README.md  a.exs  b.exs  c.exs  influx.sh
implementations/elixir/examples/transport/multi_hop/one_way/: a.exs  b.exs  r1.exs  r2.exs
implementations/elixir/examples/transport/multi_hop/two_way/: a.exs  b.exs
implementations/elixir/examples/transport/single_hop/one_way/: a.exs  b.exs
implementations/elixir/examples/transport/single_hop/two_way/: a.exs
implementations/elixir/examples/vault/: default.exs
implementations/elixir/examples/worker/: stateful.exs  stateless.exs
implementations/elixir/lib/ockam/channel/: xx.ex
implementations/rs/: Cargo.toml
implementations/rs/message_router/: Cargo.toml
implementations/rs/message_router/src/: lib.rs
implementations/rs/no_std_traits/src/: lib.rs
implementations/rs/node/: Cargo.toml
implementations/rs/node/src/: lib.rs
implementations/rs/node/tests/: integration_test.rs
implementations/rs/ockam/: Cargo.toml
implementations/rs/ockam/src/message/: mod.rs
implementations/rs/ockam/src/profile/: change_event.rs  mod.rs  profile.rs  profile_manager.rs  signed_change_event.rs
implementations/rs/tcp_router/: Cargo.toml
implementations/rs/tcp_router/src/: tcp_manager.rs  tcp_worker.rs
implementations/rs/worker_manager/src/: lib.rs
implementations/rust/: Cargo.toml
implementations/rust/_api_prototype/app/: Cargo.toml
implementations/rust/_api_prototype/app/examples/: 1.rs  2.rs  3.rs  4.rs  5.rs
implementations/rust/_api_prototype/network/: Cargo.toml
implementations/rust/_api_prototype/network/examples/: 1.rs  2.rs  tcp_server.rs
implementations/rust/_api_prototype/ockam/: Cargo.toml
implementations/rust/_api_prototype/ockam/src/: lib.rs
implementations/rust/_api_prototype/ockam/src/worker/: builder.rs  mod.rs
implementations/rust/_api_prototype/ockam_macros/: Cargo.toml
implementations/rust/_api_prototype/ockam_macros/src/: lib.rs
implementations/rust/app/: Cargo.toml
implementations/rust/app1/: Cargo.toml
implementations/rust/app1/examples/: 1.rs
implementations/rust/app2/: Cargo.toml
implementations/rust/channel/src/: lib.rs
implementations/rust/channel_refactor/: Cargo.toml
implementations/rust/channel_refactor/src/: lib.rs
implementations/rust/daemon/: Cargo.toml
implementations/rust/daemon/src/: cli.rs  config.rs  node.rs  sink.rs
implementations/rust/examples/workers/: Cargo.toml
implementations/rust/examples/workers/examples/: jsonrpc.rs  jsonrpc_alice_bob.rs  worker.rs  worker_builder.rs  worker_from_closure.rs  worker_mailbox.rs  worker_send.rs
implementations/rust/kex/src/: error.rs  xx.rs
implementations/rust/message_refactor/: Cargo.toml
implementations/rust/ockam/ockam/: Cargo.toml
implementations/rust/ockam/ockam/src/: address.rs  lib.rs  message.rs  node.rs  queue.rs  registry.rs  route.rs  router.rs  task.rs  transport.rs  transport_jsonrpc.rs  worker.rs
implementations/rust/ockam/ockam/src/entity/: profile.rs
implementations/rust/ockam/ockam/src/entity/profile/: permission.rs  rule.rs
implementations/rust/ockam_node_no_std/src/: lib.rs
implementations/rust/ockam_node_tokio/src/: lib.rs
implementations/rust/system/src/: commands.rs
implementations/rust/vault/src/: lib.rs  types.rs
implementations/rust/vault/src/c/: mod.rs
implementations/rust/vault/src/software/: mod.rs
tools/docker/demo/: influxdb.sh
