[workspace]

members = [
    "channel",
    "common",
    "daemon",
    "examples",
    "kex",
    "message",
    "message_refactor",
    "node",
    "router",
    "system",
    "transport",
    "vault",
    "xeddsa",
    "c/generate_bindings",
    "c/bindings",
    "c/rust_memory",
]

default-members = [
    "channel",
    "common",
    "daemon",
    "examples",
    "kex",
    "message",
    "message_refactor",
    "node",
    "router",
    "system",
    "transport",
    "vault",
    "xeddsa",
    "c/bindings",
    "c/rust_memory",
]
