[package]
name = "ockam"
version = "0.0.0"
authors = ["Ockam Developers"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["rlib"]

[features]
default = ["no_std", "json"]
std = ["ockam_node_std"]
no_std = ["ockam_node_no_std"]
json = ["serde", "serde_json", "jsonrpc-http-server", "jsonrpc-client-core", "jsonrpc-client-http"]

[dependencies]
cfg-if = "0.1"
ockam_node_attribute = {path = "../ockam_node_attribute", version = "*"}
ockam_node_no_std = {path = "../ockam_node_no_std", version = "*", optional = true}
ockam_node_std = {path = "../ockam_node_std", version = "*", optional = true}
hashbrown = "0.9.1"

jsonrpc-http-server = {version = "16.0.0", optional = true}
jsonrpc-client-core = { version = "0.5.0", optional = true}
jsonrpc-client-http = { version = "0.5.0", optional = true}
serde = {version ="1.0", optional = true,  features = ["derive"]}
serde_json = {version ="1.0", optional = true}

[dev-dependencies]
trybuild = {version = "1.0.38", features = ["diff"]}
